--- a/2-5 演習問題.html
+++ b/2-5 演習問題.html
@@ -5,6 +5,30 @@
    <link rel="stylesheet" href="style.css" />
    <title>2-5演習問題</title>
  </head> 
+ 
+ <body>
+<!-- header -->
+   <header>
+     <h1 class="heading">
+       <a href="https://infratop.jp/">infratop</a>
+     </h1>
+   </header>
 
+   <!-- navigation -->
+   <nav>
+     <ul class="nav-list">
+       <li class="nav-list-item">
+         <a href="https://web-camp.io/">webcamp</a>
+       </li>
+       <li class="nav-list-item">
+         <a href="https://web-camp.io/pro/">webcamp pro</a>
+       </li>
+       <li class="nav-list-item"></li>
+         <a href
+       <li class="nav-list-item"></li>
+     </ul>
+   </nav>
+
+ </body>
  
 </html>
