--- a/2-5 演習問題.html
+++ b/2-5 演習問題.html
@@ -23,11 +23,35 @@
        <li class="nav-list-item">
          <a href="https://web-camp.io/pro/">webcamp pro</a>
        </li>
-       <li class="nav-list-item"></li>
-         <a href
-       <li class="nav-list-item"></li>
+       <il class="nav-list-item">
+         <a href="https://tenshoku-seikou.jp/">webcamp woman</a>
+       <il/>
+       <li class="nav-list-item">
+         <a href="https://web-camp.io/commit/">webcamp career</a>
+       </li>
      </ul>
    </nav>
+
+   <!-- main -->
+   <div class="main">
+     <div class="box1"></div>
+     <div class="box2"></div>
+     <div class="box3"></div>
+     <div class="box4"></div>
+     <div class="box5"></div>
+     <div class="box6"></div>
+     <div class="box7"></div>
+     <div class="box8"></div>
+     <div class="box9"></div>
+     <div class="box10"></div>
+     <div class="box11"></div>
+     <div class="box12"></div>
+   </div>
+
+   <!-- footer -->
+   <footer>
+     <p class="footer-text">©All rights reserved by Infratop.inc.</p>
+   </footer>
 
  </body>
  
