--- a/1-5 演習問題.html
+++ b/1-5 演習問題.html
@@ -7,7 +7,7 @@
  </head> 
  
  <body>
-<!-- header -->
+<!-- 以下header -->
    <header>
      <h1 class="heading">
        <a href="https://infratop.jp/">infratop</a>
